kubernetes/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: seminario-deployment
    namespace: seminario-applications-ns
spec:
    replicas: 3
    selector:
        matchLabels:
            app: seminario-app
    template:
        metadata:
            labels:
                app: seminario-app
        spec:
            containers:
            - name: seminario-container
              image: seminario-dotnet-ms:latest
              ports:
              -   name: http
                  containerPort: 8080
                  protocol: TCP
              -   name: https
                  containerPort: 8443
                  protocol: TCP
