kubernetes/manifests/5-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: seminario-ingress
    namespace: workshop
spec:
    rules:
    - host: seminario.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seminario-service
                port:
                  number: 80
